possible about section mobile font-size fix

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -1097,7 +1097,7 @@ body {
         left: 50%;
         transform: translate(-50%, -50%);
         font-family: Rustico;
-        font-size: 1.3rem;
+        font-size: 1.2rem;
         text-align: center;
         color: transparent;
       }
